# fuel_forecast_explorer

./: .flake8  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
notebooks/: data_1d_resample.py  data_cleaning.py  price_data_aggregation.py
src/: data.py
streamlit/: st_app.py
